# fortran-ctypes-python-example

./: .gitignore  CMakeLists.txt  README.md
src/fortran/: example.f90
src/python/: example.py
